# ctcache

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  clang-tidy  clang-tidy-cache  clang-tidy-cache-server  docker-compose.yml  install-user-client  install-user-service  pyproject.toml  requirements.txt
config/ctcache/: 01_tidy.conf  10_host.conf  systemd_env
doc/latex/: CMakeLists.txt  beamer_ctcache.tex.in  beamercolorthemectcache.sty.in  overview.tex
doc/latex/data/: p2_j4_cxc_ctc.json  p2_j4_cxc_ctd.json  p2_j4_cxx_ctc.json  p2_j4_cxx_ctd.json  p3_j4_cxc_ctc.json  p3_j4_cxc_ctd.json  p3_j4_cxx_ctc.json  p3_j4_cxx_ctd.json  project1_build_times.json  project2_build_times.json  project3_build_times.json
doc/latex/tools/: common.py  plot-build-speedup.py  plot-build-time.py  plot-resource-usage.py  plot-system-load.py
example/: .clang-tidy  CMakeLists.txt  bad01.cpp  good.cpp
src/ctcache/: clang_tidy_cache.py  clang_tidy_cache_server.py
static/: ctcache.css  ctcache.js  index.html
systemd/: ctcache-pi.service  ctcache.service
tools/: hits_ratios_graph.py  render_histogram_video.py
